<resources>
    <string name="app_name">Sarv</string>
    <string name="new_poetry_title">شاعر های معاصر</string>
    <string name="seeAllPoetry">مشاهده تمامی شاعرها</string>
    <string name="old_poetry_title">شاعر های کهن</string>
    <string name="last_poem_read">آخرین شعر خوانده شده</string>
    <string name="search">جست و جو</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LoadRemoteDataError">عدم دسترسی به اینترنت</string>
    <string name="dictionary">لغت نامه</string>
    <string name="favorite">علاقه مندی</string>
    <string name="store">فروشگاه</string>
    <string name="home">خانه</string>
    <string name="back">برگشت</string>
    <string name="ticket">تیکت</string>
    <string name="more">بیشتر</string>
    <string name="game">بازی</string>
    <string name="fal">فال حافظ</string>
    <string name="settings">تنظیمات</string>
    <string name="height_text">ارتفاع متن</string>
    <string name="background_color">پس زمینه</string>
    <string name="theme">تم</string>
    <string name="lighting">روشنایی</string>
    <string name="font_type">نوع فونت</string>
    <string name="font_size">اندازه فونت</string>
    <string name="celebrity">معروف ترینها</string>
    <string name="font_color">رنگ فونت</string>
    <string name="userNameText">نام کاربری</string>
    <string name="phoneNumberText">شماره تلفن</string>
    <string name="verificationCode">کد فعال سازی</string>
    <string name="email">ایمیل</string>
    <string name="confirm">تایید</string>
    <string name="condition">وضعیت</string>
    <string name="buySub">خرید اشتراک</string>
    <string name="buyCoin">نگارستان</string>
    <string name="firstTimeLogIn">نام کاربری خود را وارد کنید و درغیر این صورت حساب کاربری خود را ایجاد کنید</string>
    <string name="loginUpDeatil">این حساب کاربری برای حفظ اشتراک و تعداد نگاره های شما میباشد ، درصورت عدم تمایل ما هیچ مسئولیتی را به عهده نمیگیریم</string>
    <string name="vpnWarining">لطفا درزمان پرداخت ویا ایجاد حساب کاربری فیلترشکن خود را خاموش کنید</string>
    <string name="TicketTitle_txt">تیکت</string>
    <string name="WriteAmessage_txt">نوشتن پیام</string>
    <string name="HopeToBeDoneTicket_txt">امیدواریم که مشکل رفع شده باشه!</string>
    <string name="IsTicketAnswered_txt">سوالت جواب داده شد ؟</string>
    <string name="YesCloseTicket_txt">اره ، تیکت رو ببند</string>
    <string name="NoContinue_txt">نه هنوز</string>
    <string name="SendTime_txt">ارسال شده :</string>
    <string name="ReciveTitle_txt">دریافت شده :</string>
    <string name="active_ticket"> تیکت فعال</string>
    <string name="inactive_ticket"> تیکت غیرفعال</string>
    <string name="TicketListTitle_txt">لیست تیکت ها</string>
    <string name="CreateNewTicket_txt">ایجاد تیکت جدید</string>
    <string name="shouldToCreateAccount_txt">برای ارسال تیکت لازم است حساب کاربری را فعال کنید</string>
    <string name="summaryTitle_txt">خلاصه ای از موضوع …</string>
    <string name="CreateTicket_btn">ساخت تیکت</string>
    <string name="inActive_ticket">تیکت غیرفعال</string>
    <string name="SendNewMessage_txt">ارسال پیام جدید</string>
    <string name="NewMessage_txt">پیام جدید</string>
    <string name="lorem">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و ف کرد. بگویوجود طراحی اساسا مورد استفاده قرار گیرد.</string>
    <string-array name="themes">
        <item>پیش فرض سیستم</item>
        <item>روشن</item>
        <item>تاریک</item>
    </string-array>
    <string name="joy">امیدواریم از این برنامه لذت برده باشید.</string>
    <string name="resource_explanation">محتوای این برنامه توسط گروهی از افراد دوستار زبان فارسی تهیه و جمع آوری شده که از کتب شاعران معاصر و شاعران کهن پارسی گوی بوده است و همچنین بعضی از سایت ها و مراکزی که در این حوزه فعالیت دارند در جمع آوری این مطالب سهیم بوده اند.</string>
    <string name="about_us_res">محتوای اصلی این برنامه برگرفته از کتب شاعران و همچنین سایت ها و دیگر منابع شعر فارسی است.</string>
    <string name="about_us_swan">برنامه سرو برای گسترش دوستار اشعار فارسی و آشتی با ادبیان طراحی شده، این برنامه تسط تیک برنامه نویسان و گرافیستان شرکت سوان نک طراحی و توسعه یافته است. رویکردی که برای این برنامه در نظر گرفته شده است بسیار جامع و مفید برای افرادی است که از این برنامه استفاده می کنند.</string>
    <string name="abjad">ابجد</string>
    <string name="filtericon">FilterIcon</string>
    <string name="with_volume">بعدی با ولوم</string>
    <string name="programmers">تیم برنامه نویسی</string>
    <string name="team_members">رضا درویشیان ، احمدرضا هاشمی ، سید علی نبوی</string>
</resources>