<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >


            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:columnCount="3"
                android:padding="10dp"
                android:rowCount="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                >

                <LinearLayout
                    android:id="@+id/fontMargin_subFab_Linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/fab_image_background_night"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_height_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/height_text"
                        android:textSize="@dimen/_10ssp"

                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/backGroundColor_subFab_Linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fab_background_color_popup"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/fab_image_background_night"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_background_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/background_color"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/theme_subFab_Linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/fab_image_background_night"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_theme" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/theme"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lighting_subFab_Linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/fab_image_background_night"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_lighting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/lighting"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/back_to_home_subFsb_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/fab_image_background_night"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_home" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/back"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/appFont_subFab_Linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fab_font_text_view_popup"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/fab_image_background_night"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_font_type" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/font_type"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fontSize_subFab_Linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fab_font_size_popup"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/fab_image_background_night"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/font_size"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fontColor_subFab_Linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"

                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fab_color_text_popup"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/fab_image_background_night"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_text_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/font_color"

                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/next_with_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/fab_image_background_night"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_next_with_volume" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/with_volume"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>


            </GridLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>