<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/logIn_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ورود"
                        android:textSize="@dimen/_20ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/closeBtn_LogInPopUp"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:src="@drawable/ic_close"
                        app:layout_constraintBottom_toBottomOf="@+id/logIn_TextView"
                        app:layout_constraintEnd_toEndOf="@+id/logIn_TextView"
                        app:layout_constraintStart_toStartOf="@+id/logIn_TextView"
                        app:layout_constraintTop_toTopOf="@+id/logIn_TextView" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/popUp_LogIn_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ورود"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:id="@+id/slash_LogIn_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="/"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:id="@+id/logUp_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="عضویت"
                    android:textColor="@color/profile_green"
                    android:textSize="@dimen/_20ssp" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:srcCompat="@drawable/ic_avatar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_36sdp"
        android:hint="@string/userNameText"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_edt_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:maxLength="32"
            android:maxLines="1"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_12ssp"
        android:layout_marginEnd="@dimen/_36sdp"
        android:elevation="4dp"
        android:hint="@string/phoneNumberText"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_input_layout"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_edt_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verification_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_12ssp"
        android:layout_marginEnd="@dimen/_36sdp"
        android:elevation="4dp"
        android:hint="@string/verificationCode"
        android:visibility="invisible"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_input_layout"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verification_edt_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirmBtn_LogInUp"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginLeft="@dimen/_60sdp"
        android:layout_marginRight="@dimen/_60sdp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/green"
        android:text="@string/confirm"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintCircleRadius="@dimen/_9sdp"
        app:layout_constraintEnd_toEndOf="@+id/user_name_input_layout"
        app:layout_constraintStart_toStartOf="@+id/user_name_input_layout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_28sdp"
        android:text="@string/vpnWarining"
        android:textColor="@color/black"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/firstTimeLogIn"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_28sdp"
        android:gravity="center"
        android:text="@string/loginUpDeatil"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>